--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <title>三竹當客家官方網站</title>
-     <link rel="stylesheet"herf="style.css">
+     <link rel="stylesheet"href="style.css">
 </head>
 
 <body>
