--- a/index.htm
+++ b/index.htm
@@ -11,8 +11,8 @@
   <h1>三竹當客家</h1>
   <nav class="navigation">
   <ul>
-  <li><a href="#profile">呱呱的由來</a></li>
-  <li><a href="#concert">我的朋友</a></li>
+  <li><a href="#profile">企業簡介</a></li>
+  <li><a href="#concert">企業信念</a></li>
   <li><a href="#history">我們的歷史</a></li>
   <li><a href="#member">成員介紹</a></li>
   </ul>
